admin side footer text overlap issue with the main content fix

--- a/assets/css/admin.scss
+++ b/assets/css/admin.scss
@@ -9305,7 +9305,10 @@
 
    // Everest Forms Global Settings Design ReVamp CSS
    #wpcontent {
+	background: #FAFAFC;
+	
 	   #wpbody-content {
+			margin-bottom: 60px;
 		   padding-bottom: 25px;
 	   }
    }
